--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -47,14 +47,14 @@
 \vspace*{-65pt}
 % Title bar
 \begin{flushright}
+daviess@uw.edu \\
 Department of Mathematics\\
-University of Washington\\
-daviess@uw.edu
+University of Washington
 \end{flushright}
 
 \begin{center}
-	\vspace{-48pt}
-{\fontsize{20}{30}\textbf{Sami Davies} }
+	\vspace{-60pt}
+{\fontsize{70}{30}\textbf{Sami Davies} }
 \end{center}
 %  {\hfill
 %  \begin{tabular}{c c}
@@ -226,7 +226,7 @@ B.S. in Mathematical Sciences, Minor in Economics
 
 \bigskip
 
- \employer{Leadership Alliance Scholar}{2014}{}
+ \employer{Leadership Alliance Scholar}{2014}{~}
 % \smallskip
 % The Leadership Alliance selects talented undergraduates from underrepresented groups with the aim to
 % provide them mentorship and resources to becoming leaders in academia and industry. 
@@ -266,11 +266,11 @@ I served as a teaching assistant for the following courses.
 
 
 
-\header{Math related outreach}
+\header{Math outreach}
 \bigskip
 \employer{Freedom Education Project Puget Sound}{2017-present}{~}
 \vspace{-5mm}
-Tutored fall of 2017. Course instructor summer of 2018.
+Tutor fall of 2017. Course instructor summer of 2018.
 \bigskip
 
 \employer{Math Circle}{2018-present}{~}
