add research interest to CV

--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -103,6 +103,9 @@ B.S. in Mathematical Sciences, Minor in Economics
 
 \bigskip
 
+\header{Research Interests}
+
+My research primarily focuses on the design of approximation algorithms. I am currently interested in designing cleaner, yet better algorithms for scheduling and coloring problems. 
 
 \bigskip
 
