--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -44,7 +44,7 @@
 
 \small
 \smallskip
-\vspace*{-65pt}
+\vspace*{-55pt}
 % Title bar
 \begin{flushright}
 daviess@uw.edu \\
@@ -54,7 +54,8 @@ University of Washington
 
 \begin{center}
 	\vspace{-60pt}
-{\fontsize{70}{30}\textbf{Sami Davies} }
+{\fontsize{70}{30}\textbf{Sami Davies} }\\
+samidavies.com
 \end{center}
 %  {\hfill
 %  \begin{tabular}{c c}
