SOS and Nebraska posts

--- a/_posts/2018-06-02-Traces.md
+++ b/_posts/2018-06-02-Traces.md
@@ -7,7 +7,4 @@ categories: post
 research: true
 ---
 
-In the trace reconstruction problem, an unknown binary string is put through a deletion channel, which deletes each bit with some constant probability, and noisy traces are output. This arises in DNA storage and sensor networks. The question catching the attention of many people: how many noisy traces are needed to reconstruct the original string with high probability? Currently, both the average case and worst case instances of this problem are dead stuck- the best methods have been pushed as far as they can go and no one has presented any other promising ways forward.
-<br>
-<br>
-We are studying variants of this question on structures other than strings. This has several interesting applications in its own right, but might also give insight to a new method that can make progress in the string case.
+In the trace reconstruction problem, an unknown binary string on *n* nodes is put through a deletion channel, which deletes each bit with some constant probability, and noisy traces are output. The central question is how many noisy traces are needed to reconstruct the original string with high probability? We study a generalization of the problem on trees. For many classes of trees, including complete trees and spiders, we provide algorithms that reconstruct the labels using only a polynomial number of traces. This exhibits a stark contrast to known results on string trace reconstruction, which require exponentially many traces. Joint work with Miklos Racz and Cyrus Rashtchian.
