--- a/_posts/2017-09-23-MM-Fellow.md
+++ b/_posts/2017-09-23-MM-Fellow.md
@@ -5,5 +5,5 @@ date:   2017-09-23
 categories: post
 news: true
 ---
-I won the McKibben and Merner Endowed [Fellowship](https://math.washington.edu/student-awards) in Mathematics for my performance on my preliminary exams and first year courses! 
+I received the McKibben and Merner Endowed [Fellowship](https://math.washington.edu/student-awards) in Mathematics for my performance on my preliminary exams and first year courses.
 
