TR paper and shorten memos on research

--- a/_posts/2018-06-02-Traces.md
+++ b/_posts/2018-06-02-Traces.md
@@ -7,4 +7,4 @@ categories: post
 research: true
 ---
 
-In the trace reconstruction problem, an unknown binary string on *n* nodes is put through a deletion channel, which deletes each bit with some constant probability, and noisy traces are output. The central question is how many noisy traces are needed to reconstruct the original string with high probability? We study a generalization of the problem on trees. For many classes of trees, including complete trees and spiders, we provide algorithms that reconstruct the labels using only a polynomial number of traces. This exhibits a stark contrast to known results on string trace reconstruction, which require exponentially many traces. Joint work with Miklos Racz and Cyrus Rashtchian.
+I've studied generalizations of the trace reconstruction problem on trees. I'm interested in exploring similar statistical reconstruction problems.
