--- a/_posts/2018-06-01-Santa.md
+++ b/_posts/2018-06-01-Santa.md
@@ -2,10 +2,14 @@
 layout: post
 title:  Santa
 date:   2018-06-01
-title: Santa Claus Problem
+title: Hypergraph Matching
 categories: post
 research: true
 ---
 
-Given a set of presents and a set of children who each desire some subset of presents: how should Santa distribute presents among the kids in order to maximize the minimum happiness of any child? We design an approximation algorithm which not only gives a better constant factor approximation than the best known, but which also compares to an LP smaller than those in all previous work.
-Joint work with Thomas Rothvoss and Yihao Zhang.
+Finding perfect matchings in bipartite hypergraphs is, in general, NP-hard.
+However, when the edges of a hypergraph satisfy certain expansion conditions, 
+it becomes possible to study the problem algorithmically.
+I'm interested in studying these sufficient conditions, 
+specifically as they relate to allocation problems.
+
