fix broken paper link

--- a/_bib/2019-03-20-TR.bib
+++ b/_bib/2019-03-20-TR.bib
@@ -7,8 +7,8 @@ authors:
   - Miki
 
 extra:
-venue: arXiv
-link: https://sites.google.com/site/cyrusrashtchian/home?authuser=0
+venue: COLT 2019
+link: https://arxiv.org/abs/1902.05101
 
 links:
 ---
