--- a/_posts/2019-03-20-TR.md
+++ b/_posts/2019-03-20-TR.md
@@ -5,6 +5,6 @@ date:   2019-03-19
 categories: post
 papers: true
 authors:  Samantha Davies,  Cyrus Rashtchian, Miklos Z. Racz
-venue: On arXiv since February 2019
+venue: COLT 2019
 volume: 
 ---
