removed extra news items

--- a/_posts/2017-09-13-prelims.md
+++ b/_posts/2017-09-13-prelims.md
@@ -3,7 +3,7 @@ layout: post
 title:  Prelims &#10004;
 date:   2017-09-13
 categories: post
-news: true
+news: false
 ---
 I'm relieved to say that I passed my prelim exams!
 <br>
