--- a/_posts/2018-06-01-Math107.md
+++ b/_posts/2018-06-01-Math107.md
@@ -3,7 +3,7 @@ layout: post
 title:  Math107
 date:   2018-06-01
 categories: post
-news: true
+news: false
 ---
 
 I'm continuing to work with [FEPPS](http://fepps.org) this summer as an instructor for Math 107, Math in Society. The course samples from a collection of topics like set theory, algebra, finances, and even math history.  
