--- a/_posts/2019-01-23-nebraska.md
+++ b/_posts/2019-01-23-nebraska.md
@@ -7,5 +7,6 @@ news: true
 ---
 This weekend I'll be in Nebraska (for the first time) for the [Nebraska Conference for Undergraduate
 Women in Mathematics](https://www.math.unl.edu/~ncuwm/21stAnnual/). 
-I'm happy to be attending this event as an invited graduate student, as several of
-my friends in grad school benefitted from it as undergraduates!
+<br>
+*Update: Why are midwesterners so much more polite than other Americans?*
+
