--- a/_posts/2019-06-20-FCRC.md
+++ b/_posts/2019-06-20-FCRC.md
@@ -5,4 +5,6 @@ date:   2019-06-20
 categories: post
 news: true
 ---
-This week, I'll be heading to FCRC in Phoenix.
+This week, I'll be heading to FCRC in Phoenix. 
+<br>
+*Update: Mr. Sun was angry. Maybe I'll go back in like the winter.*
