--- a/_posts/2017-09-23-MM-Fellow.md
+++ b/_posts/2017-09-23-MM-Fellow.md
@@ -3,7 +3,7 @@ layout: post
 title:  McKibben & Merner Fellowship;
 date:   2017-09-23
 categories: post
-news: true
+news: false
 ---
 I received the McKibben and Merner Endowed [Fellowship](https://math.washington.edu/student-awards) in Mathematics for my performance on my preliminary exams and first year courses.
 
