--- a/_posts/2019-09-28-yogafall19.md
+++ b/_posts/2019-09-28-yogafall19.md
@@ -7,5 +7,4 @@ personal: true
 ---
 
 I'm a certified yoga instructor, and I completed by 200 RYT in the summer of 2019. 
-I'm teaching [yoga classes at UW](https://www.washington.edu/ima/classes/mindfulness/) 
-during the Fall 2019 quarter. 
+I teach [yoga classes at UW](https://www.washington.edu/ima/classes/mindfulness/).
