--- a/_posts/2018-07-19-santa.md
+++ b/_posts/2018-07-19-santa.md
@@ -5,6 +5,7 @@ date:   2018-07-19
 categories: post
 papers: true
 authors:  Samantha Davies,  Thomas Rothvoss, Yihao Zhang
-venue: On arXiv since July 2018
-volume: 
+venue: On arXiv since July 2018, [slides](~/Documents/Santa4-30min copy.key) 
+volume:
+
 ---
