added 311 post and link

--- a/_posts/2019-01-07-SODAconf20.md
+++ b/_posts/2019-01-07-SODAconf20.md
@@ -7,4 +7,4 @@ news: true
 ---
 Attending my first SODA this week in Salt Lake City.
 <br>
-*Update: Saw a ton of Buffalo way too close for comfort at Antelope Island, and the mole at Red Iguana-- holy mole absolutely delicious.*
+*Saw a ton of Buffalo at Antelope Island, and the mole at Red Iguana-- holy mole so good.*
