--- a/_posts/2019-01-12-sos.md
+++ b/_posts/2019-01-12-sos.md
@@ -3,7 +3,7 @@ layout: post
 title:  SOS;
 date:   2019-01-12
 categories: post
-news: true
+news: false
 ---
 Heading to Baltimore this week for the [AMS short course](http://www.ams.org/meetings/short-courses/short-course-general) on 
 *Sum of Squares*. While I'm in the city, I'll also be visiting the theory group at Johns Hopkins for a day.
