--- a/_posts/2019-01-23-nebraska.md
+++ b/_posts/2019-01-23-nebraska.md
@@ -3,7 +3,7 @@ layout: post
 title:  Nebraska
 date:   2019-01-23
 categories: post
-news: true
+news: false
 ---
 This weekend I'll be in Nebraska (for the first time) for the [Nebraska Conference for Undergraduate
 Women in Mathematics](https://www.math.unl.edu/~ncuwm/21stAnnual/). 
