--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -105,37 +105,48 @@ B.S. in Mathematical Sciences, Minor in Economics
 \bigskip
 
 \header{Research Interests}
-
-My research primarily focuses on the design of approximation algorithms. I am currently interested in designing cleaner, yet better algorithms for scheduling and coloring problems. 
-
+I design algorithms for a wide range of problems, including combinatorial optimization questions in scheduling and allocation,
+as well as statistical reconstruction problems. 
 \bigskip
 
 \header{Publications}
 \begin{enumerate}
-\item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' in submission. 
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Hierarchies, Clustering in Metric Spaces, and Scheduling with Communication Delay,'' submitted to FOCS 2020. \\
+\textit{Answers one of the top 10 open questions in scheduling, as posed by Nikhil Bansal.}
+\item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' in SODA 2020. 
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Cyrus Rashtchian. ``Reconstructing Trees from Traces,'' in COLT 2019. 
 \item Sami Davies, Chenxiao Xue, Carl R. Yerger, ``Algorithms for finding knight's tours on Aztec diamonds,'' 
 \textit{Involve, a Journal of Mathematics}, Vol. 10 (2017), No. 5, 721-734.
 \end{enumerate}
 
-\header{Presentations}
-\begin{enumerate}
-\item \textit{On Globally Defined Solutions of the Generalized Constantin-Lax-Majda Equations}. MAA Undergraduate Poster Session: 2015 Joint Mathematics Meeting. Joint presentation with Gopal Yalla.
-\item \textit{On Globally Defined Solutions of the Generalized Constantin-Lax-Majda Equations}. 2014 Leadership Alliance National Symposium. Joint presentation with Gopal Yalla.
-\item \textit{Searching for Combinatorial Interpretations Using the Bhargava Defined Factorial}. 2013 Summer Undergraduate Applied Mathematics Institute Symposium. Joint presentation with Joe Gault.
-\end{enumerate}
+% \header{Presentations}
+% \begin{enumerate}
+% \item \textit{On Globally Defined Solutions of the Generalized Constantin-Lax-Majda Equations}. MAA Undergraduate Poster Session: 2015 Joint Mathematics Meeting. Joint presentation with Gopal Yalla.
+% \item \textit{On Globally Defined Solutions of the Generalized Constantin-Lax-Majda Equations}. 2014 Leadership Alliance National Symposium. Joint presentation with Gopal Yalla.
+% \item \textit{Searching for Combinatorial Interpretations Using the Bhargava Defined Factorial}. 2013 Summer Undergraduate Applied Mathematics Institute Symposium. Joint presentation with Joe Gault.
+% \end{enumerate}
 
 \header{Invited participation}
+
 \bigskip
-\employer{Women in Theory}{June 2018}{~}
+\employer{Dagstuhl Seminar in Scheduling}{February 2020}{Shloss Dagstuhl}
+
+\bigskip
+\employer{Nebraska Conference for Women in Mathematics}{February 2019}{University of Nebraska Lincoln}
 
 
+\bigskip
+\employer{Women in Theory}{June 2018}{Harvard University}
+
+
+\bigskip
 \employer{Leadership Alliance Summer Research Program}{Summer 2014} {Brown University}
-\textit{Examining Euler Equations}. Joint work with Professor Johnny Guzman and Gopal Yalla 
+\textit{Examining Euler Equations}. Joint work with Johnny Guzman, Gopal Yalla 
 
 \bigskip
 
 \employer{Summer Undergraduate Applied Mathematics Institute}{Summer 2013}{CMU}
-\textit{Patterns of the Bhargava Defined Factorial}. Joint work with Joe Gault and Professor Gregory Johnson.
+\textit{Patterns of the Bhargava Defined Factorial}. Joint work with Joe Gault and Gregory Johnson.
 
 \clearpage
 
@@ -238,7 +249,16 @@ My research primarily focuses on the design of approximation algorithms. I am cu
 
 
 \header{Teaching}
-I served as a teaching assistant for the following courses.
+
+I taught the following courses:
+\begin{center}
+	\begin{tabular}{ l l l }
+	  \textbf{Math 107}& Math in Society & FEPPS Summer 2018 \\ 
+	  \textbf{CSE 311}&	 Foundations of Computing I & UW Spring 2020 (current quarter)	
+	\end{tabular}
+\end{center}
+
+I served as a teaching assistant for the following courses:
 \begin{center}
 	\begin{tabular}{ l l l }
 	  \textbf{Math 111}& Algebra with Applications & UW Fall 2017 \\ 
@@ -248,6 +268,7 @@ I served as a teaching assistant for the following courses.
 	\textbf{21-241}	&	Matrices and Linear Transformations & CMU Spring 2015 	
 	\end{tabular}
 \end{center}
+
 %\item{{\textbf {with high probability}}\\
 %Manage my math blog with high probability, https://samidavies.wordpress.com. Some posts are about topics in advanced mathematics, but most are aimed towards a general audience and motivated by real world examples! (My first year at UW really hindered my writing, but after September 13th 2017, 4pm EST, it should pick back up again.) }
 %\\
@@ -270,14 +291,20 @@ I served as a teaching assistant for the following courses.
 
 
 
-\header{Math outreach}
+\header{Service and  outreach}
+
 \bigskip
-\employer{Freedom Education Project Puget Sound}{2017-present}{~}
+\employer{External Reviewer}{2020}{~}
+\vspace{-5mm}
+SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}
+
+\bigskip
+\employer{Freedom Education Project Puget Sound (FEPPS)}{2017-2019}{~}
 \vspace{-5mm}
 Tutor fall of 2017. Course instructor summer of 2018.
 \bigskip
 
-\employer{Math Circle}{2018-present}{~}
+\employer{Math Circle}{2018}{~}
 \vspace{-5mm}
 Instructor spring of 2018.
 
@@ -285,7 +312,7 @@ Instructor spring of 2018.
 \bigskip
 \employer{Assocation for Women in Math}{2016-present}{~}
 \vspace{-5mm}
-Member since 2016. Currently secretary of the UW student chapter.
+Member since 2016. Secretary of the UW student chapter 2018-2019 academic year.
 
 
 
