--- a/_posts/2019-06-20-FCRC.md
+++ b/_posts/2019-06-20-FCRC.md
@@ -7,4 +7,4 @@ news: true
 ---
 This week, I'll be heading to FCRC in Phoenix. 
 <br>
-*Update: Mr. Sun was angry. Maybe I'll go back in like the winter.*
+*Whose idea was it to have this is in Phoenix in June??*
