FOCS/ SODA update

--- a/_posts/2018-06-02-Traces.md
+++ b/_posts/2018-06-02-Traces.md
@@ -2,9 +2,9 @@
 layout: post
 title:  TraceRecon
 date:   2018-06-02
-title: Trace Reconstruction
+title: Statistical Reconstruction
 categories: post
 research: true
 ---
 
-I've studied generalizations of the trace reconstruction problem on trees. I'm interested in exploring similar statistical reconstruction problems.
+I've studied generalizations of the trace reconstruction problem on trees. Currently, I am considering on an approximate version of the trace reconstruction problem. Outside of trace reconstruction, I am also working on learning mixtures of Gaussians.
