--- a/_posts/2019-06-20-FCRC.md
+++ b/_posts/2019-06-20-FCRC.md
@@ -3,7 +3,7 @@ layout: post
 title:  FCRC
 date:   2019-06-20
 categories: post
-news: true
+news: false
 ---
 This week, I'll be heading to FCRC in Phoenix. 
 <br>
