--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -83,6 +83,7 @@ samidavies.com
 \employer{University of Washington}{2016 - present}{~}
 %\schoolwithcourses{Carnegie Mellon University}
 \vspace{-4mm}
+M.S. in Mathematics, 2019\\
 Ph.D. in Mathematics
 % 3.86/4.0
 %In Major QPA: 3.77/4.0\\
@@ -111,8 +112,9 @@ as well as statistical reconstruction problems.
 
 \header{Publications}
 \begin{enumerate}
-\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Hierarchies, Clustering in Metric Spaces, and Scheduling with Communication Delay,'' submitted to FOCS 2020. \\
-\textit{Answers one of the top 10 open questions in scheduling, as posed by Nikhil Bansal.}
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction,'' in submission. 
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang.  ``Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines," in SODA 2021.\\
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Scheduling with Communication Delays via LP Hierarchies and Clustering,'' in FOCS 2020. \\
 \item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' in SODA 2020. 
 \item Sami Davies, 	Mikl\'os Z.\ R\'acz, Cyrus Rashtchian. ``Reconstructing Trees from Traces,'' in COLT 2019. 
 \item Sami Davies, Chenxiao Xue, Carl R. Yerger, ``Algorithms for finding knight's tours on Aztec diamonds,'' 
@@ -126,7 +128,11 @@ as well as statistical reconstruction problems.
 % \item \textit{Searching for Combinatorial Interpretations Using the Bhargava Defined Factorial}. 2013 Summer Undergraduate Applied Mathematics Institute Symposium. Joint presentation with Joe Gault.
 % \end{enumerate}
 
-\header{Invited participation}
+\header{Invited participation and internships}
+
+\bigskip
+\employer{Microsoft Research Intern}{Summer 2020}{Redmond, WA (held virtually)}
+Hosted by Janardhan Kulkarni in the Algorithms group.
 
 \bigskip
 \employer{Dagstuhl Seminar in Scheduling}{February 2020}{Shloss Dagstuhl}
@@ -138,6 +144,7 @@ as well as statistical reconstruction problems.
 \bigskip
 \employer{Women in Theory}{June 2018}{Harvard University}
 
+\clearpage
 
 \bigskip
 \employer{Leadership Alliance Summer Research Program}{Summer 2014} {Brown University}
@@ -148,7 +155,7 @@ as well as statistical reconstruction problems.
 \employer{Summer Undergraduate Applied Mathematics Institute}{Summer 2013}{CMU}
 \textit{Patterns of the Bhargava Defined Factorial}. Joint work with Joe Gault and Gregory Johnson.
 
-\clearpage
+
 
 %\vspace{2mm}
 % \header{Other past projects}
@@ -213,28 +220,38 @@ as well as statistical reconstruction problems.
 % 	%mathematics students		
 % 	\end{achievements}
 
-% \bigskip
+\bigskip
 
 \header{Awards and Fellowships}
 \bigskip
 
+\employer{Tanzi-Egerton Fellow}{2020}{University of Washington}
+\smallskip
+Awarded to an outstanding female, senior graduate student in mathematics\\
+
+\bigskip
+
+\employer{Microsoft Research Dissertation Grant}{2020}{Microsoft Research}
+Awarded to 10 graduate students in computer science across the US to support them in finishing their Ph.D. work
+\bigskip
+
 \employer{McKibben and Merner Endowed Fellowship in Mathematics}{2017-2019}{University of Washington}
-% \smallskip
-% Awarded to two students who were exceptional in their preliminary exams 
-% and first year courses\\
+\smallskip
+Awarded to two students who were exceptional in their preliminary exams 
+and first year courses\\
 \bigskip
 
 \employer{Department of Mathematics, Statistics, and Computer Science Fellowship}{2015}{University of Illinois at Chicago}
-% \smallskip
-% Awarded to outstanding incoming first year students in the department of MSCS at UIC\\
+\smallskip
+Awarded to outstanding incoming first year students in the department of MSCS at UIC\\
 \bigskip
 
 
 \employer{Senior Leadership Recognition Award}{2015}{Carnegie Mellon University}
 
-% \smallskip
+\smallskip
 
-% One of 40 students honored for making significant contributions to CMU's community 
+One of 40 students honored for making significant contributions to CMU's community 
  \bigskip
 
  \employer{College and University Honors}{2015}{Carnegie Mellon University}
@@ -254,7 +271,7 @@ I taught the following courses:
 \begin{center}
 	\begin{tabular}{ l l l }
 	  \textbf{Math 107}& Math in Society & FEPPS Summer 2018 \\ 
-	  \textbf{CSE 311}&	 Foundations of Computing I & UW Spring 2020 (current quarter)	
+	  \textbf{CSE 311}&	 Foundations of Computing I & UW Spring 2020 	
 	\end{tabular}
 \end{center}
 
@@ -289,19 +306,26 @@ I served as a teaching assistant for the following courses:
 %\end{achievements}
 
 
-
+\clearpage
 
 \header{Service and  outreach}
 
 \bigskip
-\employer{External Reviewer}{2020}{~}
+\employer{External Reviewer}{}{~}
 \vspace{-5mm}
-SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}
+SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}, MFCS 2020, ISAAC 2020, \emph{Operations Research}
+
+\bigskip
+\employer{Washington Directed Reading Program}{2018-present}{~}
+\vspace{-5mm}
+Mentor for the WDRP, which pairs undergraduate students with mathematics graduate student mentors for quarter-long independent reading project, 
+in the spring of 2019 and the fall of 2020. Helped conceive and write grants for the WDRP in the summer of 2018.
+
 
 \bigskip
 \employer{Freedom Education Project Puget Sound (FEPPS)}{2017-2019}{~}
 \vspace{-5mm}
-Tutor fall of 2017. Course instructor summer of 2018.
+Tutor during fall and winter of 2017. Course instructor during the summer of 2018 at the Washington Corrections Center for Women.
 \bigskip
 
 \employer{Math Circle}{2018}{~}
