--- a/_posts/2019-04-20-COLTtr.md
+++ b/_posts/2019-04-20-COLTtr.md
@@ -3,6 +3,6 @@ layout: post
 title:  COLTtr
 date:   2019-04-20
 categories: post
-news: true
+news: false
 ---
 Our paper on Tree Trace Reconstruction has been accepted for presentation at COLT 2019.
