fix title thing

--- a/_bib/2020-10-07-schedprec2.bib
+++ b/_bib/2020-10-07-schedprec2.bib
@@ -1,5 +1,5 @@
 ---
-title: Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines
+title: Scheduling with Communication Delays via LP Hierarchies and Clustering II   Weighted Completion Times on Related Machines
 
 
 authors:
